[metadata]
name = RUV Sarpur
version = 12.0.2
description = Python script to download shows off the Icelandic RÚV website. 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/odinndagur/ruvsarpur
author = Sverrir Sigmundarson

[options]
py_modules = ruvsarpur
install_requires =
  colorama
  termcolor
  python-dateutil
  requests
  simplejson
  fuzzywuzzy
  python-levenshtein
  ffmpeg-python
include_package_data=True

[options.entry_points]
console_scripts =
  ruvsarpur = ruvsarpur:main

[bdist_wheel]
universal = True
